[style] fix z-index of extraction progress bar

--- a/src/Components/Modal/styles.css
+++ b/src/Components/Modal/styles.css
@@ -98,6 +98,7 @@
   height: 10px;
   background-color: #1351b4;
   border-radius: 0 10px 10px 0;
+  z-index: 1;
   transition: all .3s ease;
 }
 
